--- a/static/ajax-solr/templates/bodybody_publications.html
+++ b/static/ajax-solr/templates/bodybody_publications.html
@@ -22,8 +22,8 @@
   <div>
   <h3>Publication Facets</h3>
 
-  <h5>Top Keywords&nbsp;<button class="btn btn-mini btn-info" data-toggle="button collapse" data-target="#keywords"><span class="caret"></span></button></h5>
-  <div class="tagcloud collapse" id="keywords"></div> 
+  <h5>Top Keywords</h5>
+  <div class="tagcloud" id="keywords"></div> 
 
 
   <h5>Top Authors</h5> 
@@ -39,8 +39,12 @@
   -->
 
   <h5>Year of Publication</h5>
+  <br/>
+  <div id="pubyeardiv" class="nocollapse">
   <div id="pubyear"></div>
   <span id="pubyear_amount" class="rangevalues"></span>
+  </div>
+
   </div>
 
   <div class="clear"></div> 
@@ -52,8 +56,8 @@
   <h5>Object Types</h5> 
   <div class="tagcloud" id="objecttypes"></div>
   
-  <h5>Object Names</h5> 
-  <div class="tagcloud" id="objectnames"></div>
+  <h5>Object Names&nbsp;<button class="btn btn-mini btn-info" data-toggle="button collapse" data-target="#objectnames"><span class="caret"></span></button></h5> 
+  <div class="tagcloud collapse" id="objectnames"></div>
    </div>
 
   <div class="clear"></div> 
@@ -64,8 +68,8 @@
   <h3>Observation Facets</h3>
 
   
-  <h5>Observation Types</h5> 
-  <div class="tagcloud" id="obsvtypes"></div>
+  <h5>Observation Types&nbsp;<button class="btn btn-mini btn-info" data-toggle="button collapse" data-target="#obsvtypes"><span class="caret"></span></button></h5> 
+  <div class="tagcloud collapse" id="obsvtypes"></div>
   
   <h5>Data Product Types</h5> 
   <div class="tagcloud" id="datatypes"></div>
@@ -73,28 +77,40 @@
   <h5>Wavelengths</h5> 
   <div class="tagcloud" id="emdomains"></div>
   
-  <h5>Instruments</h5> 
-  <div class="tagcloud" id="instruments"></div>
+  <h5>Instruments&nbsp;<button class="btn btn-mini btn-info" data-toggle="button collapse" data-target="#instruments"><span class="caret"></span></button></h5> 
+  <div class="tagcloud collapse" id="instruments"></div>
   
-  <h5>Targets</h5> 
-  <div class="tagcloud" id="targets"></div>
+  <h5>Targets&nbsp;<button class="btn btn-mini btn-info" data-toggle="button collapse" data-target="#targets"><span class="caret"></span></button></h5> 
+  <div class="tagcloud collapse" id="targets"></div>
   
-  <h5>RA</h5>
+  <h5>RA&nbsp;<button class="btn btn-mini btn-info" data-toggle="button collapse" data-target="#radiv"><span class="caret"></span></button></h5>
+  <br/>
+  <div id="radiv" class="collapse">
   <div id="ra"></div>
   <span id="ra_amount" class="rangevalues"></span>
-  
-  <h5>DEC</h5>
+  </div>
+
+  <h5>DEC&nbsp;<button class="btn btn-mini btn-info" data-toggle="button collapse" data-target="#decdiv"><span class="caret"></span></button></h5>
+  <br/>
+  <div id="decdiv" class="collapse">
   <div id="dec"></div>
   <span id="dec_amount" class="rangevalues"></span>
-  
-  <h5>When Observed?</h5>
+  </div>
+
+  <h5>When Observed?&nbsp;<button class="btn btn-mini btn-info" data-toggle="button collapse" data-target="#obsvtimediv"><span class="caret"></span></button></h5>
+  <br/>
+  <div id="obsvtimediv" class="collapse">
   <div id="obsvtime"></div>
   <span id="obsvtime_amount" class="rangevalues"></span>
-  
-  <h5>Exposure Time (ksec)</h5>
+  </div>
+
+  <h5>Exposure Time (ksec)&nbsp;<button class="btn btn-mini btn-info" data-toggle="button collapse" data-target="#exptimediv"><span class="caret"></span></button></h5>
+  <br/>
+  <div id="exptimediv" class="collapse">
   <div id="exptime"></div>
   <span id="exptime_amount" class="rangevalues"></span>
-  
+  </div>
+
   <!--h5>Observation Ids</h5> 
   <div class="tagcloud" id="obsids"></div-->
   </div>
@@ -105,14 +121,14 @@
 
   <div>
   <h3>Proposal Facets</h3>
-  <h5>Proposal Types</h5> 
-  <div class="tagcloud" id="proposaltype"></div>
+  <h5>Proposal Types&nbsp;<button class="btn btn-mini btn-info" data-toggle="button collapse" data-target="#proposaltype"><span class="caret"></span></button></h5> 
+  <div class="tagcloud collapse" id="proposaltype"></div>
   
-  <h5>Proposal PIs</h5> 
-  <div class="tagcloud" id="proposalpi"></div>
+  <h5>Proposal PIs&nbsp;<button class="btn btn-mini btn-info" data-toggle="button collapse" data-target="#proposalpi"><span class="caret"></span></button></h5> 
+  <div class="tagcloud collapse" id="proposalpi"></div>
   
-  <h5>Proposal Ids</h5> 
-  <div class="tagcloud" id="propids"></div>
+  <h5>Proposal Ids&nbsp;<button class="btn btn-mini btn-info" data-toggle="button collapse" data-target="#propids"><span class="caret"></span></button></h5> 
+  <div class="tagcloud collapse" id="propids"></div>
   </div>
 
   <div class="clear"></div> 
